# homeschool-app

./: .env  .gitignore  Dockerfile  Makefile  README.md  compose.yml  pyproject.toml
app/: settings.py  urls.py  utils.py  views.py
app/static/css/: styles.css
app/templates/: auth.html  base.html  base_unauthenticated.html  boilerplate.html  footer.html  header.html  header_partial.html  home.html  index.html  menu.html  menu_partial.html
app/templates/partials/: auth.html  header.html
communities/: admin.py  apps.py  models.py  urls.py  utils.py  views.py
communities/migrations/: 0001_initial.py  0002_community_image_url.py  0003_alter_community_image_url.py  0004_communitymember.py  0005_alter_community_id_alter_communitymember_community.py  0006_update_comment.py  0007_remove_update_community_remove_update_user_and_more.py
communities/models/: community_models.py  event_models.py  post_models.py
communities/templates/communities/: communities.html  communities_list.html  communities_partial.html  community.html  community_partial.html  events.html  events_partial.html  horizontal_list_partial.html  index.html  index_partial.html  nav_partial.html  posts.html  updates.html
communities/views/: community_views.py  event_views.py  post_views.py
polls/: models.py  urls.py  views.py
polls/migrations/: 0001_initial.py
polls/templates/polls/: index.html
resources/: admin.py  models.py  urls.py  utils.py  views.py
resources/management/commands/: load_sample_data.py
resources/migrations/: 0001_initial.py
tests/: test_app.py
(+15 files in other folders)
