[tool.poetry]
name = "app"
version = "0.1.0"
description = "Homeschooling App"
authors = ["Nathan Hadzariga <n.hadzariga@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.0"
django-htmx = "^1.19.0"
psycopg2-binary = "^2.9.0"
libsass = "^0.23.0"
django-sass-processor = "^1.4.1"
django-compressor = "^4.5.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-django = "^4.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
